# deskpiano

./: main.py  pyproject.toml
instruments/: harpsichord.json  piano.json
src/deskpiano/: __main__.py
