[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskpiano"
version = "0.1"
dependencies = [
    "mido",
    "sounddevice",
    "numpy",
    "fastapi",
    "uvicorn"
]

[project.scripts]
deskpiano = "deskpiano.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

